--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,10 @@
             android:label="@string/TITLE_MOVIE_DETAILS"
             android:parentActivityName=".MainActivity">
         </activity>
+        <provider
+            android:authorities="@string/content_authority"
+            android:name=".Data.MovieProvider"
+            android:exported="false" />
     </application>
 
 </manifest>
